test/classes/initializers/errors/errHandling/throwWithoutHelper.bad
throwWithoutHelper.chpl:4: In initializer:
throwWithoutHelper.chpl:8: error: initializers are not yet allowed to throw errors
